me parece que ya estaría

--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -2,7 +2,7 @@
 <div class="p-5"></div>
 
 <ion-col 
-  class="ion-text-end md:ion-text-end flex justify-center">
+  class="flex justify-center">
   <ion-button
     class="px-4 rounded-md w-50 h-4"
     (click)="goToAdminPanel()"
@@ -12,7 +12,7 @@
   </ion-button>
 </ion-col>
 
-<ion-col class="ion-text-end md:ion-text-end flex justify-center">
+<ion-col class=" flex justify-center">
   <ion-button fill="outline" (click)="createUser()">
     <ion-ripple-effect></ion-ripple-effect>
     <svg
