panel de propiedades de admin mejorado, mobile

--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -4,7 +4,7 @@
 <ion-col 
   class="flex justify-center">
   <ion-button
-    class="px-4 rounded-md w-50 h-4"
+    class="c-cta c-cta--branded whitespace-nowrap mr-2"
     (click)="goToAdminPanel()"
     color="tertiary"
   >
@@ -34,7 +34,7 @@
 
 <ion-grid 
   class="max-w-5xl mx-auto border border-gray-300 rounded-lg shadow-lg 
-    my-4 bg-white overflow-auto max-h-[calc(100vh-14rem)]"
+    my-4 bg-white overflow-auto max-h-[calc(100vh-17rem)]"
   >
   <ion-row 
     class="font-semibold text-sm text-center 
