mejor apariencia je

--- a/frontend/src/app/components/properties-table/properties-table.component.html
+++ b/frontend/src/app/components/properties-table/properties-table.component.html
@@ -1,11 +1,32 @@
 <ion-grid class="max-w-5xl border rounded-lg shadow-lg my-4 bg-white overflow-auto max-h-[calc(100vh-14rem)]">
   <!-- Encabezado de la tabla -->
-  <ion-row class="font-semibold text-sm text-center border-b bg-gray-100 hidden md:flex">
-    <ion-col size="3" class="px-2 py-2 border-r">Propiedad</ion-col>
-    <ion-col size="2" class="px-2 py-2 border-r">Precio</ion-col>
-    <ion-col size="2" class="px-2 py-2 border-r">Ubicación</ion-col>
-    <ion-col size="2" class="px-2 py-2 border-r">Habitaciones</ion-col>
-    <ion-col size="1.5" class="px-2 py-2 border-r">Baños</ion-col>
+  <ion-row 
+    class="font-semibold text-sm text-center border-b bg-gray-100 hidden md:flex">
+    <ion-col 
+      size="3" 
+      class="px-2 py-2 border-r"
+    >Propiedad
+    </ion-col>
+    <ion-col 
+      size="2" 
+      class="px-2 py-2 border-r"
+    >Precio
+    </ion-col>
+    <ion-col 
+      size="2" 
+      class="px-2 py-2 border-r"
+    >Ubicación
+    </ion-col>
+    <ion-col 
+      size="2" 
+      class="px-2 py-2 border-r"
+    >Habitaciones
+    </ion-col>
+    <ion-col 
+      size="1.5" 
+      class="px-2 py-2 border-r"
+    >Baños
+    </ion-col>
   </ion-row>
 
   <ion-row 
