Mucho en data-source y no me acuerdo qué en layout component

--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -11,8 +11,8 @@
     </main>
   </div>
 
-  <!-- Pie de página general -->
-  <footer class="bg-gray-800 text-white text-center p-4">
+  <!-- Pie de página general, siempre está abajo fiexeado -->
+  <footer class="w-full bg-gray-800 text-white text-center py-4">
     © 2024 RentMatch
   </footer>
 </div>
