Fixes de resolucion generales

--- a/frontend/src/app/pages/admin-panel/admin-panel.page.html
+++ b/frontend/src/app/pages/admin-panel/admin-panel.page.html
@@ -1,6 +1,6 @@
 <!-- Contenedor principal -->
 <ion-grid
-  class="border rounded-lg shadow-lg my-4 overflow-y-auto min-h-[calc(100vh-8rem)]"
+  class="border rounded-lg shadow-lg overflow-y-auto h-screen mt-14 pb-14"
 >
   <ion-col>
     <ion-row
