--- a/frontend/src/app/pages/favorites/favorites.page.html
+++ b/frontend/src/app/pages/favorites/favorites.page.html
@@ -1,6 +1,4 @@
-  <div class="p-4">
-  </div>
-  <div class="flex h-auto">
+<div class="flex h-screen mt-14 pb-14">
     <!-- Favoritos-->
     <div *ngIf="favoriteList.length > 0; else noFavorites" 
       class="overflow-auto max-w-full max-h-[calc(100vh-8rem)] w-full pb-6">
