--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   class="relative h-full bg-[url('https://kato-lawyer-souzoku.jp/wp-content/uploads/fudousan_201.jpg')] bg-cover bg-center"
 >
   <div
-    class="flex min-h-full flex-col justify-center py-12 px-4 sm:px-6 lg:px-8"
+    class="flex h-screen flex-col justify-center mt-14 pb-14 px-4 sm:px-6 lg:px-8"
   >
     <div class="mt-8 mx-auto w-full max-w-md z-10 relative ">
       <div
