--- a/frontend/src/app/pages/all-properties/all-properties.page.html
+++ b/frontend/src/app/pages/all-properties/all-properties.page.html
@@ -1,4 +1,4 @@
-<ion-split-pane contentId="main-content" when="lg" class="h-screen">
+<ion-split-pane contentId="main-content" when="lg" class="h-screen mt-14 pb-14">
   <!-- Sidebar -->
   <ion-menu 
     contentId="main-content"  
@@ -13,7 +13,7 @@
 
   <ion-router-outlet id="main-content">
     <div 
-      class="overflow-auto max-w-full max-h-[calc(100vh-4rem)] pt-24">
+      class="overflow-auto max-w-full h-full">
       <!-- Botón de filtro mobile -->
       <div 
         class="lg:hidden p-2 mt-7 flex justify-center">
