--- a/frontend/src/app/pages/properties/properties.page.html
+++ b/frontend/src/app/pages/properties/properties.page.html
@@ -1,3 +1,3 @@
-<div *ngIf="propertiesList().length > 0;" class="overflow-y-auto max-w-full max-h-[calc(100vh-7rem)] px-4">
+<div *ngIf="propertiesList().length > 0;" class="overflow-y-auto max-w-full h-screen pb-14 mt-14 px-4">
   <app-properties-table [itemList]="this.propertiesList()"></app-properties-table>
 </div>
