--- a/frontend/src/app/pages/property-compare/property-compare.page.html
+++ b/frontend/src/app/pages/property-compare/property-compare.page.html
@@ -1,4 +1,4 @@
-<div class="p-4 overflow-auto max-w-full max-h-[calc(100vh-4rem)]">  
+<div class="p-4 overflow-auto max-w-full h-screen mt-14 pb-14">  
 <!-- Condición para mostrar la tabla solo si hay propiedades en la lista de comparación -->
   <div *ngIf="compareList().length > 0; else noCompareMessage" class="overflow-auto max-w-full max-h-[calc(100vh-4rem)]">
     <app-compare-table [itemList]="this.compareList()"></app-compare-table>
