--- a/frontend/src/app/pages/property-view/property-view.page.html
+++ b/frontend/src/app/pages/property-view/property-view.page.html
@@ -1,4 +1,4 @@
- <div class="p-4 overflow-auto max-w-full max-h-[calc(100vh-4rem)]">
+ <div class="p-4 overflow-auto max-w-full h-screen mt-14 pb-14">
     <ion-card class="bg-card rounded-lg p-4 mb-4">
       <ion-card-header class="flex flex-row">
         <ion-card-title class="text-2xl font-bold mb-2 flex-1"
