--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -1,4 +1,4 @@
-<ion-content class="bg-gray-50 overflow-y-auto min-h-[calc(100vh-8rem)]">
+<ion-content class="bg-gray-50 overflow-y-auto h-screen mt-14 pb-14">
   <div
     class="relative h-full bg-[url('https://kato-lawyer-souzoku.jp/wp-content/uploads/fudousan_201.jpg')] bg-cover bg-center overflow-hidden"
   >
