Se ven las propiedades

--- a/frontend/src/app/components/compare-table/compare-table.component.html
+++ b/frontend/src/app/components/compare-table/compare-table.component.html
@@ -23,7 +23,7 @@
             </button>
           </div>
           <ion-img
-            [src]="compareItem.property.img_url"
+            [src]="compareItem.property.main_img_url"
             class="h-24 w-full object-cover"
           ></ion-img>
           <ion-card-title class="text-base font-semibold">{{
