--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -3,7 +3,7 @@
 >
 <div class="relative w-full">
   <img
-    [src]="property.img_url"
+    [src]="property.main_img_url"
     alt="{{ property.title }}"
     class="w-full h-32 object-cover"
   />
