--- a/frontend/src/app/pages/property-view/property-view.page.html
+++ b/frontend/src/app/pages/property-view/property-view.page.html
@@ -38,7 +38,7 @@
         </ul>
         <div class="grid grid-cols-3 gap-2 mb-4 border-b border-t items-center">
           <img
-            src="{{property?.img_url}}"
+            src="{{property?.main_img_url}}"
             alt="Property Image 1"
             class="rounded-lg h-[90%]"
           />
