fix: Ya funcionan bien todas las calls a los endpoints de favoritos

--- a/frontend/src/app/pages/property-view/property-view.page.html
+++ b/frontend/src/app/pages/property-view/property-view.page.html
@@ -50,7 +50,7 @@
           <li>{{property?.contact_data}}</li>
           <li>
             <ion-button
-              onClick="this.goToAllProperties()"
+              (click)="goToAllProperties()"
               class="bg-primary text-primary-foreground rounded-lg p-2 block text-center hover:bg-primary/80"
             >Volver</ion-button>
           </li>
