tamaño de favorito

--- a/frontend/src/app/pages/favorites/favorites.page.html
+++ b/frontend/src/app/pages/favorites/favorites.page.html
@@ -16,7 +16,7 @@
   <!-- No hay favoritos -->
   <ng-template #noFavorites>
     <div class="flex flex-col items-center justify-center text-center mx-auto 
-      my-8 p-6 bg-white rounded-lg shadow-lg max-w-md">
+      my-8 p-6 bg-white rounded-lg shadow-lg w-96 h-80">
       <ion-icon name="star-outline" class="text-6xl text-gray-600 mb-4"></ion-icon>
       <p class="text-gray-700 text-lg font-semibold mb-2">No tienes propiedades en favoritos</p>
       <p class="text-gray-500">Explora nuestras propiedades y agrega tus favoritas para verlas aquí.</p>
