listado de comparar listo con lo pedido

--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -25,7 +25,7 @@
     </div>
 </div>
   <ion-card-header>
-    <ion-card-title class="text-xl font-bold text-gray-800">{{
+    <ion-card-title class="text-xl font-bold text-gray-800 h-12">{{
       property.title
     }}</ion-card-title>
   </ion-card-header>
